Finished two sections and started the footer

--- a/index.html
+++ b/index.html
@@ -37,67 +37,73 @@
         <p class="content">Fylo stores your most important files in one secure location. 
           Access them wherever you need, share and collaborate with friends, 
           family, and co-workers.</p>
-          <input type="text" placeholder="ex: youremail@domain">
+          <input type="text" placeholder="ex: youremail@domain.com">
           <button>Get Started</button>
       </div>
       <img class="section-img" src="./images/illustration-1.svg" alt="Illustration of the second section">
     </section>
 
-    <section class="container">
-      <div>
-        <h1 class="title">Stay productive, wherever you are</h1>
-        <p class="content">Never let location be an issue when accessing your files. Fylo has you 
+    <img class="curve-img-desktop" src="./images/bg-curve-desktop.svg" alt="Ilustração de curva no desktop">
+    
+    <section class="container-section-second">
+      <div class="container-box">
+        <h1 class="title title-section-second">Stay productive, wherever you are</h1>
+        <p class="content-section-second">Never let location be an issue when accessing your files. Fylo has you<br> 
           covered for all of your file storage needs.</p>
-        <p class="content">Securely share files and folders with friends, family and colleagues for 
+        <p class="content">Securely share files and folders with friends, family and colleagues for<br> 
           live collaboration. No email attachments required!</p>
-        <a href="#">See how Fylo works</a>
-        <div class="msn">Fylo has improved our team productivity by an order of magnitude. Since 
-          making the switch our team has become a well-oiled collaboration machine.</div>
+        <a class="link" href="#">See how Fylo works</a>
+        <div class="msn">
+          <p>Fylo has improved our team productivity by<br> an order of magnitude. Since 
+          making the<br> switch our team has become a well-oiled<br> collaboration machine.</p>
+          <div class="profile">
+            <img src="./images/avatar-testimonial.jpg" alt="Founder profile picture">
+            <div>
+              <p>Kyle Burton</p>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
       </div>
       <img class="second-section-img" src="./images/illustration-2.svg" alt="Illustration of the second section">
     </section>
-  </main>
 
-  
-
-  
-
-  
-
-  
-
-  
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
+    <section class="access">
+      <div class="access-content">
+        <h2>Get early access today</h2>
+        <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
+          If you have any questions, our support team would be happy to help you.</p>
+      </div>
+      <div class="access-contact">
+        <input type="text" placeholder="ex: youremail@domain.com">
+        <button>Get Started For Free</button>
+      </div>
+    </section>
+  </main> 
 
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <img src="./images/logo.svg" alt="Logo no rodapé">
+    <div class="box">
+      <div class="contact">
+        <p>Phone: +1-543-123-4567</p>
+        <p>example@fylo.com</p>
+      </div>
+      <div class="other-links">
+        <p>About Us</p>
+        <p>Jobs</p>
+        <p>Press</p>
+        <p>Blog</p>
+      </div>
+      <div class="other-contacts">
+       <p>Contact Us</p>
+       <p>Terms</p>
+       <p>Privacy</p>
+      </div>
+      <div class="icones">
+        
+      </div>
+    </div>
   </footer>
+  
 </body>
 </html>
