--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </main> 
 
   <footer>
-    <img src="./images/logo.svg" alt="Logo no rodapé">
+    <img src="./images/logo.svg" alt="Logo on the footer">
     <div class="box">
       <div class="contact">
         <p>Phone: +1-543-123-4567</p>
@@ -99,8 +99,10 @@
        <p>Terms</p>
        <p>Privacy</p>
       </div>
-      <div class="icones">
-        
+      <div class="icons">
+       <a href="#facebook"><img src="./images/facebook-branco.png" alt="Logo do facebook"></a> 
+       <a href="#tuiter"><img src="./images/icon-tuiter-white.png" alt="Logo do tuiter"></a> 
+       <a href="#facebook"><img src="./images/icon-isntagran-white.png" alt="Logo do instagran"></a> 
       </div>
     </div>
   </footer>
