Modified footer icons

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
@@ -11,8 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <title>Fylo landing page with two-column layout</title>
 </head>
@@ -99,10 +100,10 @@
        <p>Terms</p>
        <p>Privacy</p>
       </div>
-      <div class="icons">
-       <a href="#facebook"><img src="./images/facebook-branco.png" alt="Logo do facebook"></a> 
-       <a href="#tuiter"><img src="./images/icon-tuiter-white.png" alt="Logo do tuiter"></a> 
-       <a href="#facebook"><img src="./images/icon-isntagran-white.png" alt="Logo do instagran"></a> 
+      <div class="icon-bar">
+        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="#" class="google"><i class="fa fa-instagram"></i></a>
       </div>
     </div>
   </footer>
