--- a/index.html
+++ b/index.html
@@ -33,27 +33,32 @@
 
   <main>
     <section class="container">
-      <div>
+      <div class="container-content">
         <h1 class="title">All your files in one secure location, accessible anywhere.</h1>
-        <p class="content">Fylo stores your most important files in one secure location. 
+        <p class="content">
+          Fylo stores your most important files in one secure location. 
           Access them wherever you need, share and collaborate with friends, 
-          family, and co-workers.</p>
+          family, and co-workers.
+        </p>
           <input type="text" placeholder="ex: youremail@domain.com">
           <button>Get Started</button>
       </div>
-      <img class="section-img" src="./images/illustration-1.svg" alt="Illustration of the second section">
+      <div class="container-img">
+        <img class="section-img" src="./images/illustration-1.svg" alt="Illustration of the second section">
+      </div>
     </section>
 
     <img class="curve-img-desktop" src="./images/bg-curve-desktop.svg" alt="Ilustração de curva no desktop">
+    <img class="curve-img-mobile" src="./images/bg-curve-mobile.svg" alt="Ilustração de curva na versão mobile">
     
     <section class="container-section-second">
       <div class="container-box">
         <h1 class="title title-section-second">Stay productive, wherever you are</h1>
         <p class="content-section-second">Never let location be an issue when accessing your files. Fylo has you<br> 
           covered for all of your file storage needs.</p>
-        <p class="content">Securely share files and folders with friends, family and colleagues for<br> 
+        <p class="content-section-second">Securely share files and folders with friends, family and colleagues for<br> 
           live collaboration. No email attachments required!</p>
-        <a class="link" href="#">See how Fylo works</a>
+        <a class="link" href="#">See how Fylo works <img src="./images/icon-arrow.svg" alt=""></a>
         <div class="msn">
           <p>Fylo has improved our team productivity by<br> an order of magnitude. Since 
           making the<br> switch our team has become a well-oiled<br> collaboration machine.</p>
