Links in the footer

--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
     <div class="box">
       <div class="contact">
         <p>Phone: +1-543-123-4567</p>
-        <p>example@fylo.com</p>
+        <a href=""></a><p>example@fylo.com</p>
       </div>
       <div class="other-links">
-        <p>About Us</p>
-        <p>Jobs</p>
-        <p>Press</p>
-        <p>Blog</p>
+        <a href=""><p>About Us</p></a>
+        <a href=""><p>Jobs</p></a>
+        <a href=""><p>Press</p></a>
+        <a href=""><p>Blog</p></a>
       </div>
       <div class="other-contacts">
-       <p>Contact Us</p>
-       <p>Terms</p>
-       <p>Privacy</p>
+        <a href=""><p>Contact Us</p></a>
+        <a href=""><p>Terms</p></a>
+        <a href=""><p>Privacy</p></a>
       </div>
       <div class="icon-bar">
         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
