--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
     <div class="box">
       <div class="contact">
         <p>Phone: +1-543-123-4567</p>
-        <a href=""></a><p>example@fylo.com</p>
+        <p><a href="#">example@fylo.com</a></p>
       </div>
       <div class="other-links">
-        <a href=""><p>About Us</p></a>
-        <a href=""><p>Jobs</p></a>
-        <a href=""><p>Press</p></a>
-        <a href=""><p>Blog</p></a>
+        <p><a href="#About Us">About Us</a></p>
+        <p><a href="#Jobs">Jobs</a></p>
+        <p><a href="#Press">Press</a></p>
+        <p><a href="#Blog">Blog</a></p>
       </div>
       <div class="other-contacts">
-        <a href=""><p>Contact Us</p></a>
-        <a href=""><p>Terms</p></a>
-        <a href=""><p>Privacy</p></a>
+        <p><a href="#Contact Us">Contact Us</a></p>
+        <p><a href="#Terms">Terms</a></p>
+        <p><a href="#Privacy">Privacy</a></p>
       </div>
       <div class="icon-bar">
         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
